[project]
name = "diplomathesis"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Krutoy",email = "arturkrutoj134@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12,<4"
dependencies = [
    "pydantic (<2.12)",
    "aiogram (>=3.22.0,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)",
    "aiofiles (<24.2)",
    "requests (>=2.32.5,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "orjson (>=3.11.4,<4.0.0)",
    "h3 (>=4.3.1,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "environs (>=14.5.0,<15.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "timezonefinder (==6.5.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
