[project]
name = "diplomathesis"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Krutoy",email = "arturkrutoj134@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "aiofiles (==24.1.0)",
    "aiogram (==3.15.0)",
    "aiohttp (==3.10.11)",
    "alembic (>=1.16.0)",
    "apscheduler (>=3.10.4)",
    "asyncpg (>=0.30.0)",
    "environs (==14.1.0)",
    "h3 (==4.2.1)",
    "matplotlib (==3.9.3)",
    "numpy (==2.2.0)",
    "openpyxl (>=3.1.5)",
    "orjson (>=3.10.18)",
    "pandas (==2.2.3)",
    "python-dotenv (==1.0.1)",
    "pytz (==2024.2)",
    "redis (==5.2.1)",
    "scipy (>=1.14.1)",
    "sqlalchemy (==2.0.37)",
    "timezonefinder (==6.5.8)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "aiohttp-socks (>=0.11.0,<0.12.0)"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require a running PostgreSQL instance",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
